--- a/Vegetarians Assistant/Vegetarians Assistant.Services/Vegetarians Assistant.Services.csproj
+++ b/Vegetarians Assistant/Vegetarians Assistant.Services/Vegetarians Assistant.Services.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Vegetarians Assistant.Repo\Vegetarians Assistant.Repo.csproj" />
   </ItemGroup>
 
