--- a/Vegetarians Assistant/Vegetarians Assistant.Services/Vegetarians Assistant.Services.csproj
+++ b/Vegetarians Assistant/Vegetarians Assistant.Services/Vegetarians Assistant.Services.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Microsoft.IdentityModel.Protocols" Version="7.1.2" />
     <PackageReference Include="Microsoft.IdentityModel.Protocols.OpenIdConnect" Version="7.1.2" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.1.2" />
